# flask-restful-api

./: .gitignore  README.md  pyproject.toml
ecommerce/: main.py
tests/: test_app.py
