[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Arthur Martelli <arthur.martellig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "ecommerce.main:main"
test = "pytest:main"
